examples/bad/ERROR_NOT_A_RECORD/unit_is_not_a_record.st
language core;
extend with #records, #unit-type;

fn main(u : Unit) -> Nat {
  return u.field
}


//ERROR_NOT_A_RECORD
